# LogiCraft

./: .gitignore  Cargo.toml  README.md  design.md
demo/: lc.toml
demo/src/: lib.lc  main.lc  utils.lc
src/: args.rs  config.rs  main.rs  pipeline.rs
src/control/: config.rs
src/error/: context.rs
src/format/: pack.rs
src/grammar/: builtins.rs  identifier.rs  keywords.rs  lexer.rs  lexer_old.rs  mod.rs  operators.rs  parser.rs
src/grammar/lexer/: error.rs  helper.rs  mod.rs  peg.rs  token.rs
src/grammar/parser/: ast.rs  attributes.rs  error.rs  helper.rs  mod.rs  peg.rs
src/grammar/semantics/: ast.rs  decl.rs  error.rs  mod.rs  module.rs  name.rs  symbol.rs  usemap.rs
src/grammar/semifier/: ast.rs  mod.rs  program.rs  resolver.rs
src/interface/: cli.rs  config.rs
src/ir/: mod.rs  value.rs
src/output/: dir.rs  mod.rs
src/report/: error.rs  line.rs  location.rs  mod.rs
src/report/message/: highlight.rs  line.rs  mod.rs
src/semantics/: ast_optimizer.rs  mod.rs  module.rs
src/semantics/stage1/: mod.rs  optimizer.rs  validator.rs
