[package]
name = "logicraft"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
colored = "2.1.0"
peg = "0.8.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
toml = "0.8.19"
zip = { version = "2.1.6", default-features = false, features = ["deflate"] }
